--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -16,34 +16,9 @@
     line-height: 1.5;
    
   }
-  .background-image {
-    position: absolute;
-    top: 390px; /* Ajusta la posición vertical de la imagen */
-    left: 50px; /* Ajusta la posición horizontal de la imagen */
-    width: 300px; /* Ajusta el ancho de la imagen */
-    height: 200px; /* Ajusta la altura de la imagen */
-    object-fit: cover; /* Ajusta el tamaño de la imagen para cubrir el contenedor */
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%); /* Oculta la imagen con una máscara de recorte */
-  animation: revealImage 1s forwards;
-  animation-delay: 0.2s; /* Ajusta el retraso de la animación */
-  opacity: 0;
-  }
-  .background-image:hover {
-    transform: rotateY(180deg); 
-  } 
+  
  
-  .background-image_2 {
-    position: absolute;
-    top: 132px; /* Ajusta la posición vertical de la imagen */
-    left: 930px; /* Ajusta la posición horizontal de la imagen */
-    width: 300px; /* Ajusta el ancho de la imagen */
-    height: 200px; /* Ajusta la altura de la imagen */
-    object-fit: cover; /* Ajusta el tamaño de la imagen para cubrir el contenedor */
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%); /* Oculta la imagen con una máscara de recorte */
-    animation: revealImage 1s forwards;
-    animation-delay: 0.2s; /* Ajusta el retraso de la animación */
-    opacity: 0;
-  }
+  
   @keyframes revealImage {
     0% {
       clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%); /* Máscara inicial que oculta la imagen */
@@ -54,9 +29,6 @@
       opacity: 1; /* Opacidad final */
     }
   }
-  .background-image_2:hover {
-    transform: rotateY(180deg); 
-  } 
 
   
   .home_description{
@@ -64,4 +36,80 @@
     height: 100px;
     z-index: 1;
     
+  }
+  @media (max-width: 577px){
+    .home_title{
+      margin-top: -220px;
+      padding-bottom: 15px;
+    }
+    
+    .home_content {
+      text-align: center;
+      line-height: 1.5;
+     
+    }
+    .background-image {
+      position: absolute;
+      top: 800px; 
+      left: 80px; 
+      width: 270px; 
+      height: 180px; 
+      object-fit: cover;
+    }
+    .background-image_2 {
+      position: absolute;
+      top: 156px; 
+      left: 260px; 
+      width: 220px; 
+      height: 180px; 
+      object-fit: cover;
+    }
+    .home_description{
+      width: 450px;
+      height: 100px;
+      z-index: 1;
+      
+    }
+   
+  }
+  @media (min-width:577px) and ( max-width: 768px){
+
+  }
+  @media (min-width: 768px) and (max-width: 992px){
+
+  }
+  @media (min-width: 992px)and (max-width: 1200px){
+
+  }
+  @media (min-width: 1200px) {
+    .background-image {
+      position: absolute;
+      top: 390px; /* Ajusta la posición vertical de la imagen */
+      left: 50px; /* Ajusta la posición horizontal de la imagen */
+      width: 300px; /* Ajusta el ancho de la imagen */
+      height: 200px; /* Ajusta la altura de la imagen */
+      object-fit: cover; /* Ajusta el tamaño de la imagen para cubrir el contenedor */
+      clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%); /* Oculta la imagen con una máscara de recorte */
+    animation: revealImage 1s forwards;
+    animation-delay: 0.2s; /* Ajusta el retraso de la animación */
+    opacity: 0;
+    }
+    .background-image:hover {
+      transform: rotateY(180deg); 
+    } 
+    .background-image_2 {
+      position: absolute;
+      top: 132px; /* Ajusta la posición vertical de la imagen */
+      left: 930px; /* Ajusta la posición horizontal de la imagen */
+      width: 300px; /* Ajusta el ancho de la imagen */
+      height: 200px; /* Ajusta la altura de la imagen */
+      object-fit: cover; /* Ajusta el tamaño de la imagen para cubrir el contenedor */
+      clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%); /* Oculta la imagen con una máscara de recorte */
+      animation: revealImage 1s forwards;
+      animation-delay: 0.2s; /* Ajusta el retraso de la animación */
+      opacity: 0;
+    }
+    .background-image_2:hover {
+      transform: rotateY(180deg); 
+    } 
   }
