--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -97,3 +97,18 @@ body {
     }
   }
   
+  @media (max-width: 577px){
+
+  }
+  @media (min-width:577px) and ( max-width: 768px){
+
+  }
+  @media (min-width: 768px) and (max-width: 992px){
+
+  }
+  @media (min-width: 992px)and (max-width: 1200px){
+
+  }
+  @media (min-width: 1200px) {
+    
+  }
