--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -68,3 +68,18 @@ justify-content: center;
     box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2);
     
   }
+  @media (max-width: 577px){
+
+  }
+  @media (min-width:577px) and ( max-width: 768px){
+
+  }
+  @media (min-width: 768px) and (max-width: 992px){
+
+  }
+  @media (min-width: 992px)and (max-width: 1200px){
+
+  }
+  @media (min-width: 1200px) {
+    
+  }
