--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -65,6 +65,7 @@ body {
   }
   .header_ul {
     margin-left: -20px;
+    gap: 20px;
     justify-content: center; /* Centra los elementos en la pantalla */
   }
   
@@ -74,7 +75,7 @@ body {
   
   .header_content-btn {
     display: none;
-    width: 299px;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between
@@ -83,7 +84,7 @@ body {
   
   /* Estilos para los botones */
   .mi-boton-genial {
-    width: 60px;
+    width: 100px;
     height: 40px;
     cursor: pointer;
     border: none;
