chore: estilos y responsividad en la paguina de experiencia y proyectos

--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -1,5 +1,11 @@
 /* Estilos para el contenido de experiencia */
-
+.espe{
+  @media screen and (max-width: 100%) {
+    max-width: 90%;
+    font-size: 14px;
+    margin: 0.5rem auto;
+  }
+}
 .espe_content {
     display: grid; /* Aplicamos display grid para el contenedor de secciones */
     grid-gap: 10px;
@@ -22,14 +28,14 @@
   
   /* Estilos para los títulos de sección */
   .expe section h3 {
-    font-size: 20px;
+    
     font-weight: bold;
     
   }
   
   /* Estilos para los subtítulos de sección */
   .expe section h5 {
-    font-size: 16px;
+    
     font-weight: bold;
     color: #7e7e7e;
   }
@@ -38,16 +44,6 @@
   .expe section p {
     font-size: 16px;
     color: #777;
-  }
-  
-  /* Asignar áreas para cada sección */
-  .espe_principal {
-    grid-area: espe_principal;
-    margin-left: 35px;
-  }
-  
-  .espe_secundario {
-    grid-area: espe_secundario;
   }
   
   .espe_ultimo {
@@ -69,17 +65,222 @@ justify-content: center;
     
   }
   @media (max-width: 577px){
+    .espe_content {
+      display: block; /* Aplicamos display grid para el contenedor de secciones */
+      grid-gap: 10px;
+    }
+    
+    /* Estilos para cada sección */
+    .expe section {
+      
+      padding: 30px;
+      margin-top: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      
+    }
+    .expe section h3 {
+      font-size: 15px;
+      font-weight: bold;
+      
+    }
 
+    .expe section h5 {
+      font-size: 13px;
+      font-weight: bold;
+      color: #7e7e7e;
+    }
+    
+    .expe section p {
+      font-size: 12px;
+      color: #777;
+    }
+     
+    .espe_ultimo {
+      margin-top: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      padding: 20px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+    .espe_ultimo h3{
+      font-size: 15px;
+    }
+    .espe_ultimo p{
+      font-size: 12px;
+    }
+    h3{
+    display: flex;
+    justify-content: center;
+  
+    }
   }
   @media (min-width:577px) and ( max-width: 768px){
+  
+    .expe section {
+      
+      padding: 30px;
+      margin-top: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      
+    }
+    .expe section h3 {
+      font-size: 17px;
+      font-weight: bold;
+      
+    }
 
+    .expe section h5 {
+      font-size: 15px;
+      font-weight: bold;
+      color: #7e7e7e;
+    }
+    
+    .expe section p {
+      font-size: 14px;
+      color: #777;
+    }
+     
+    .espe_ultimo {
+      margin-top: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      padding: 30px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+    .espe_ultimo h3{
+      font-size: 17px;
+    }
+    .espe_ultimo p{
+      font-size: 14px;
+    }
+    h3{
+    display: flex;
+    justify-content: center;
+  
+    }
   }
   @media (min-width: 768px) and (max-width: 992px){
+    .expe section {
+      margin-top: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      
+    }
+    .expe section h3 {
+      font-size: 20px;
+      font-weight: bold;
+      
+    }
 
+    .expe section h5 {
+      font-size: 18px;
+      font-weight: bold;
+      color: #7e7e7e;
+    }
+    
+    .expe section p {
+      font-size: 16px;
+      color: #777;
+    }
+     
+    .espe_ultimo {
+      margin-top: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      padding: 30px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+    .espe_ultimo h3{
+      width: 100%;
+      font-size: 20px;
+    }
+    .espe_ultimo p{
+      font-size: 16px;
+    }
   }
   @media (min-width: 992px)and (max-width: 1200px){
+    .expe section {
+      
+      padding: 30px;
+      margin-top: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      
+    }
+    .expe section h3 {
+      font-size: 22px;
+      font-weight: bold;
+      
+    }
 
+    .expe section h5 {
+      font-size: 19px;
+      font-weight: bold;
+      color: #7e7e7e;
+    }
+    
+    .expe section p {
+      font-size: 17px;
+      color: #777;
+    }
+     
+    .espe_ultimo {
+      margin-top: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+    .espe_ultimo h3{
+      width: 100%;
+      font-size: 22px;
+    }
+    .espe_ultimo p{
+      font-size: 17px;
+    }
   }
   @media (min-width: 1200px) {
+    .expe section {
+      padding: 30px;
+      margin-top: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      
+    }
+    .expe section h3 {
+      font-size: 25px;
+      font-weight: bold;
+      width: 100%;
+    }
+
+    .expe section h5 {
+      font-size: 19px;
+      font-weight: bold;
+      color: #7e7e7e;
+    }
     
+    .expe section p {
+      font-size: 18px;
+      color: #777;
+    }
+     
+    .espe_ultimo {
+      margin-top: 20px;
+      margin-left: 10px;
+      margin-right: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    } 
+    .espe_ultimo h3{
+      width: 100%;
+      font-size: 25px;
+    }
+    .espe_ultimo p{
+      font-size: 18px;
+    }
   }
