--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -1,18 +1,15 @@
 /* AboutMe.css */
 .about {
-    margin-top: -26px;
     position: relative;
-    width: 100%;
-    height: 100%; /* Ajusta la altura deseada del contenedor */
+    height: 120vh; /* Ajusta la altura deseada del contenedor */
     background-image: url('/Banner-Superior-1-removebg-preview.png');
     background-size: cover;
     font-weight: bold;
   }
+ 
   
   .about_title {
     text-align: center;
-    padding-top: 68px;
-    font-size: 31px;
   }
   
   .about_content_padre {
@@ -21,17 +18,18 @@
   }
   
   .dark .about_content_padre {
+    margin-top: -24px;
     height: 100%;
     background: hsla(0, 0%, 4%, 0.755);
   }
   
   .about_content {
-    padding-top: 0px;
-    padding-left: 50px;
+    padding-top: 30px;
+    padding-left: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr; /* Dividimos el contenido en dos columnas de igual tamaño */
-    gap: 10px;
-    font-size: 20px;
+    gap: 5px;
+    
   }
   
   .about_personalizado {
@@ -51,26 +49,126 @@
       width: 100%; /* Llega al ancho completo mostrando todo el texto */
     }
   }
-  
-  /* Aplica la animación "typewriter" al párrafo con la clase .typewriter-text */
-   .typewriter-text {
-    overflow: hidden; /* Oculta el texto que sale del contenedor */
-    white-space: nowrap;
-    animation: typewriter 4s steps(70) forwards; /* 4s es la duración de la animación */
-    /* "steps(40)" dividirá la animación en 40 pasos, ajusta este número según desees */
-  }
   @media (max-width: 577px){
-
+    .about_title {
+      text-align: center;
+      padding-top: 68px;
+    }
+    .about_content p {
+      font-size: 12px;
+    }
+    
+    .about_personalizado {
+      padding: 40px;
+      text-align: center;
+      font-size: 15px;
+      height: 200px;
+      
+    }
+    .typewriter-text {
+      overflow: hidden; /* Oculta el texto que sale del contenedor */
+      white-space: normal;
+      animation: typewriter 4s steps(70) forwards; /* 4s es la duración de la animación */
+      /* "steps(40)" dividirá la animación en 40 pasos, ajusta este número según desees */
+    }
   }
   @media (min-width:577px) and ( max-width: 768px){
-
+    .about_title {
+      text-align: center;
+      padding-top: 108px;
+    }
+    .about_content p {
+      font-size: 15px;
+    }
+    
+    .about_personalizado {
+      padding: 40px;
+      text-align: center;
+      font-size: 18px;
+      height: 200px;
+      
+    }
+    .typewriter-text {
+      overflow: hidden; /* Oculta el texto que sale del contenedor */
+      white-space: normal;
+      animation: typewriter 4s steps(70) forwards; /* 4s es la duración de la animación */
+      /* "steps(40)" dividirá la animación en 40 pasos, ajusta este número según desees */
+    }
   }
   @media (min-width: 768px) and (max-width: 992px){
-
+    .about_title {
+      text-align: center;
+      padding-top: 108px;
+      
+    }
+    .about_content p {
+      font-size: 15px;
+    }
+    
+    .about_personalizado {
+      padding: 40px;
+      text-align: center;
+      font-size: 20px;
+      height: 200px;
+      
+    }
+    .typewriter-text {
+      overflow: hidden; /* Oculta el texto que sale del contenedor */
+      white-space: nowrap;
+      animation: typewriter 4s steps(70) forwards; /* 4s es la duración de la animación */
+      /* "steps(40)" dividirá la animación en 40 pasos, ajusta este número según desees */
+    }
   }
   @media (min-width: 992px)and (max-width: 1200px){
-
+    .about_title {
+      text-align: center;
+      padding-top: 97px;
+      font-size: 35px;
+    }
+    .about_content p {
+      font-size: 17px;
+    }
+    
+    .about_personalizado {
+      padding: 40px;
+      text-align: center;
+      font-size: 18px;
+      height: 200px;
+    }
+    .dark .about_content_padre {
+      margin-top: -32px;
+    }
+    .typewriter-text {
+      overflow: hidden; /* Oculta el texto que sale del contenedor */
+      white-space: nowrap;
+      animation: typewriter 4s steps(70) forwards; /* 4s es la duración de la animación */
+      /* "steps(40)" dividirá la animación en 40 pasos, ajusta este número según desees */
+    }
   }
   @media (min-width: 1200px) {
+    .about_title {
+      text-align: center;
+      padding-top: 98px;
+      font-size: 35px;
+    }
+    .about_content p {
+      font-size: 17px;
+    }
     
+    .about_personalizado {
+      padding: 40px;
+      text-align: center;
+      font-size: 20px;
+      height: 200px;
+      
+    }
+    .dark .about_content_padre {
+      margin-top: -30px;
+    }
+    .typewriter-text {
+      overflow: hidden; /* Oculta el texto que sale del contenedor */
+      white-space: nowrap;
+      animation: typewriter 4s steps(70) forwards; /* 4s es la duración de la animación */
+      /* "steps(40)" dividirá la animación en 40 pasos, ajusta este número según desees */
+    }
   }
